--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,11 @@
 body {
-	text-align: center;
+  text-align: center;
   height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  background: #07580795;
+  background: #6d9d6e;
 }
 
 h1,
@@ -19,10 +19,28 @@ h3 {
 }
 
 h1 {
-	font-size: 7.5rem;
+  font-size: 7.5rem;
   margin-bottom: 2rem;
 }
 
 h3 {
-	font-size: 3rem;
+  font-size: 3rem;
+  margin-bottom: 32px;
+}
+
+button {
+  border: 3px solid #003300;
+  border-radius: 25px;
+  font-size: large;
+  font-weight: bold;
+  color: #003300;
+  background-color: transparent;
+  cursor: pointer;
+  padding: 16px 32px;
+  transition: all 0.25s ease;
+}
+
+button:hover {
+  background-color: #003300;
+  color: #6d9d6e;
 }
